@@ -44,6 +44,7 @@ public:
    bool m_triggerSingleUpdateRegion;
 
    bool m_fCollidable;
+   bool m_fToy;
 };
 
 class ATL_NO_VTABLE Primitive :
@@ -166,6 +167,8 @@ public:
    STDMETHOD(put_Threshold)(/*[in]*/ float newVal);
    STDMETHOD(get_Collidable)(/*[out, retval]*/ VARIANT_BOOL *pVal);
    STDMETHOD(put_Collidable)(/*[in]*/ VARIANT_BOOL newVal);
+   STDMETHOD(get_IsToy)(/*[out, retval]*/ VARIANT_BOOL *pVal);
+   STDMETHOD(put_IsToy)(/*[in]*/ VARIANT_BOOL newVal);
    STDMETHOD(get_Elasticity)(/*[out, retval]*/ float *pVal);
    STDMETHOD(put_Elasticity)(/*[in]*/ float newVal);
    STDMETHOD(get_Friction)(/*[out, retval]*/ float *pVal);
